Updated File Structure

--- a/public/index.html
+++ b/public/index.html
@@ -24,24 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="libraries/jquery/jquery.min.js" />
-    <link
-      rel="stylesheet"
-      href="libraries/jquery-easing/jquery.easing.compatibility.js"
-    />
-    <link
-      rel="stylesheet"
-      href="libraries/jquery-easing/jquery.easing.min.js"
-    />
-    <link rel="stylesheet" href="libraries/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="libraries/fontawesome-free/css/all.min.css" />
-    <link rel="stylesheet" href="libraries/fontawesome-free/js/all.min.js" />
-    <link
-      rel="stylesheet"
-      href="libraries/fontisto-master/css/fontisto/fontisto.min.css"
-    />
-
     <title>Cyrix Co.</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
+      referrerpolicy="no-referrer"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
